src/index.css
@tailwind base;

:root {
  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  line-height: 1.5;
  font-weight: 400;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  --black: rgb(24 24 27);
  --white: rgb(212 212 216);
  --black-70: rgb(63 63 70);
  --black-60: rgb(82 82 91);
}

* {
  box-sizing: border-box;
}
button, input {
  border:none;
  background-image:none;
  background-color:transparent;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

body {
  margin: 0;
  padding: 0;
  background-color: var(--black);
}

#root {
  display: flex;
  flex-direction: column;
  padding: 0;
  margin: 0;
  height: 100vh;
  max-width: 100vw;
}

header { 
  height: 56px;
  border-bottom: 1px solid var(--black-60);
  display: flex;
  justify-content: center;
  background-color: var(--black);
  padding: 8px 0;
}
main {
  margin-left: auto;
  margin-right: auto;
  padding-top: 16px;
}

.btn-default {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  border-radius: 8px;
  font-size: 18px;
  line-height: 28px;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  background-color: var(--black);
  color: var(--white);
  padding: 8px 12px;
}
.btn-default:hover {
  background-color: var(--black-70);
}
.btn-text {
  text-transform: uppercase;
}

.input-default {
  display: flex;
  height: 40px;
  width: 100%;
  background-color: transparent;
  padding: 4px 0;
  font-size: 18px;
  line-height: 28px;
  color: var(--white);
}
.input-default:focus {
  outline: none;
}
.input-default::placeholder {
  color: var(--black-60);
}

.popup-container {
  display: flex;
  flex-direction: column;
  width: 320px;
  border: 1px solid var(--black-60);
  border-radius: 12px;
  padding: 4px 0 0 0;
  height: 480px;
}
.search-container {
  display: flex;
  align-items: center;
  gap: 10px;
  border-bottom: 1px solid var(--black-60);
  padding: 0 20px 4px 20px;
}
.favorites-switch {
  display: flex;
  gap: 16px;
  padding: 8px 4px 0 8px;
  width: 100%;
}
.btn-switch {
  padding-top: 2px;
  padding-bottom: 2px;
}
.font-medium {
  font-weight: 500;
}

.icon-base {
  height: 20px;
  width: 20px;
  stroke: var(--white);
}
.icon-fill {
  fill: var(--white);
}
.icon-lg {
  height: 24px;
  width: 24px;
  stroke: var(--white);
  flex-shrink: 0;
}

.list-container {
  margin-top: 20px;
  overflow-y: auto;
  padding: 0 8px;
}
.coin-item {
  display: flex;
  gap: 12px;
  color: var(--white);
  font-size: 18px;
  align-items: center;
  border-radius: 8px;
  padding: 8px 12px;
  height: 42px;
  width: 100%;
}
.coin-item:hover {
  background-color: var(--black-70);
}

.input-clear {
  cursor: pointer;
  background-color: var(--black);
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
}
.hide-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

